[gd_scene load_steps=2 format=3 uid="uid://xp8cqg6kv1pe"]

[ext_resource type="Script" path="res://MultiplayerUI.gd" id="1_skm0c"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_skm0c")

[node name="StartGame" type="Button" parent="."]
offset_left = 838.0
offset_top = 81.0
offset_right = 1157.0
offset_bottom = 184.0
text = "Start Game
"

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 74.0
offset_right = 395.0
offset_bottom = 177.0
text = "Host"

[node name="Join" type="Button" parent="."]
offset_left = 453.0
offset_top = 79.0
offset_right = 772.0
offset_bottom = 182.0
text = "Join"

[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
